--- a/bin/languages/English.json
+++ b/bin/languages/English.json
@@ -1,197 +1,267 @@
 {
-  "ok": "OK", 
-  "cancel": "Cancel", 
-  "pack": "Pack", 
+  "language_file_by": "ColdWindScholar",
+  "ok": "OK",
+  "cancel": "Cancel",
+  "pack": "Pack",
+  "name": "Name",
   "unpack": "Unpack",
+  "not_active": "This program is not activated, please activate before use!",
+  "attribute": "Attribute",
+  "set_all": "Select All",
+  "toolbox": "ToolBox",
+  "project_struct": "Project Structure:",
+  "single": "Single",
+  "split": "Split",
   "run": "Run",
-  "lang": "Language:", 
-  "settings": "Settings", 
-  "warn1": "Please select a project", 
-  "warn2": "Please select a plugin", 
-  "warn3": "{} not found", 
-  "warn4": "Unpacking failed... {}", 
-  "warn5": "You have not unpacked",
-  "warn6": "Image file not found!" ,
-  "warn7": "{} not fully installed or damaged", 
-  "warn8": "This plugin is not operational", 
-  "warn9": "Uninstall failed! whether this plugin is running or occupied", 
-  "warn10": "Sorry, packaging failed!" , 
-  "warn11": "Failed to delete {}!" , 
-  "warn12": "Please enter", 
-  "warn13": "Warning: You are using a normal user to run the tool, this may cause packet deciphering (hitting) abnormalities, (You Should Use ROOT)",
-  "warn14": "Unsupported control：{}",
-  "warn15": "Unsupport System {}",
-  "text1": "Writing:", 
-  "text2": "Error writing {} :{}", 
-  "text3": "Packaging {} succeeded!" , 
-  "text4": "Decompiling {0}", 
-  "text5": "Unpacked successfully!" , 
-  "text6": "Back-compiling:",
+  "done": "Done",
+  "path": "Path",
+  "type": "Type",
+  "scopy":"Copy",
+  "size": "Size",
+  "time": "Time",
+  "running": "Running",
+  "patch": "Patch",
+  "identifier":"Identifier:",
+  "magisk_patch": "Magisk Patch",
+  "boot_file": "Boot File:",
+  "magisk_apk": "Magisk Apk:",
+  "arch": "Arch:",
+  "choose": "Choose",
+  "output_folder": "Output Folder:",
+  "log_file": "Log File:",
+  "scopied":"Copied",
+  "lang": "Language:",
+  "clean": "Clean",
+  "cache_size": "Cache Size:",
+  "ai_engine": "AI ENGINE",
+  "settings": "Settings",
+  "auto_unpack": "Auto Unpack",
+  "audit_allow": "Selinux Audit Allow",
+  "trim_image": "Trim Raw Image",
+  "special_words": "special words",
+  "help_trim_image": "\nHint: This removes any end zero padding from file,\n useful if you plan to flash it using tools like\n MTKClient when sparse isn't an option for you.\n\n\n",
+  "trim_image_summary": "Removed %d zeros from file end (~%s)",
+  "warn1": "Please select a project",
+  "warn2": "Please select a plugin",
+  "warn3": "{} is not found",
+  "warn4": "Unpack failed... {}",
+  "warn5": "Unpack the image first",
+  "warn6": "Logo patterns are not found!",
+  "warn7": "{} not fully installed or damaged",
+  "warn8": "This plugin is not executable",
+  "warn9": "Uninstall failed! The plugin might be running or locked by another program",
+  "warn10": "Sorry, the packing command failed!",
+  "warn11": "Failed to delete {}!",
+  "warn12": "Please enter",
+  "warn13": "[W]: The tool was started with normal user privileges, unpack / pack functions may not work correctly in this case (please run with Sudo/ROOT)",
+  "warn14": "Unknown Widget: {}",
+  "warn15": "Unsupported OS {}",
+  "warn16": "We need Root permission to support the normal operation of this tool. Please click Allow in the pop-up authorization window",
+  "waarn17": "Root permission not obtained",
+  "warn18": "Are you sure enable it? This feature may cause the rom cannot boot!",
+  "warn19": "The Plugin With identifier %s Was exist!Please Change identifier!",
+  "text1": "Writing:",
+  "text2": "Error writing {} : {}",
+  "text3": "Packed successfully : {}!",
+  "text4": "Decompiling {0}",
+  "text5": "Unpacked successfully!",
+  "text6": "Recompiling:",
   "text7": "Creating image:",
-  "text8": "Success!" ,
-  "text9": "Function",
+  "text8": "Success!",
+  "text9": "Functions",
   "text10": "Logs",
   "text11": "Home",
   "text12": "Project",
   "text13": "Settings",
   "text14": "About",
-  "text15": "Background Task",
-  "text16": "Donation Support",
-  "text17": "Close", 
-  "text18": "Subpage", 
+  "text15": "Tasks",
+  "text16": "Support Us",
+  "text17": "Close",
+  "text18": "Subpage",
   "text19": "Plugin",
-  "text20": "Uninstall", 
-  "text21": "Install", 
-  "text22": "Run", 
-  "text23": "Refresh", 
-  "text24": "Right-click to display menu", 
-  "text25": "Select plugin", 
+  "text20": "Uninstall",
+  "text21": "Install",
+  "text22": "Run",
+  "text23": "Refresh",
+  "text24": "Right-click on a plugin to display the options",
+  "text25": "Select plugin",
   "text26": "Plugin",
-  "text27": "not implemented", 
+  "text27": "not implemented",
   "text28": "Browse",
-  "text29": "Unloading: {}", 
-  "text30": "Uninstallation complete!" , 
+  "text29": "Uninstalling: {}",
+  "text30": "Uninstallation complete!",
   "text31": "Plugin Installation",
-  "text32": "Version:{}", 
-  "text33": "Author:{}", 
-  "text34": "Finish", 
-  "text35": "dependent normal: {}", 
-  "text36": "%s depends on %s, but %s is not installed", 
-  "text37": "Retry", 
-  "text38": "Extracting: {0}", 
-  "text39": "Installation complete", 
-  "text40": "Ready", 
+  "text32": "Version: {}",
+  "text33": "Author: {}",
+  "text34": "Finish",
+  "text35": "dependency ok: {}",
+  "text36": "%s depends on %s, but %s is not installed",
+  "text37": "Retry",
+  "text38": "Extracting: {0}",
+  "text39": "Installation complete",
+  "text40": "Ready",
   "text41": "Install",
-  "text42": "packaging settings", 
-  "text43": "EXT4 PACKING", 
-  "text44": "EROFS PACKING", 
-  "text45": "Additional settings", 
-  "text46": "Pack partition", 
-  "text47": "BR Level:{}", 
-  "text48": "Packing by:", 
-  "text49": "Packaging format:", 
-  "text50": "compression algorithm", 
-  "text51": "Version:", 
-  "text52": "Process Vbmeta", 
-  "text53": "Super packaging settings", 
-  "text54": "partition type", 
-  "text55": "Packaging partition", 
-  "text56": "Cluster name",
-  "text57": "Super size", 
-  "text58": "Sparse compression", 
-  "text59": "Packed successfully! Output: %s", 
-  "text60": "Please enter download link", 
-  "text61": "Download:", 
-  "text62": "Added to background task", 
-  "text63": "Automatic unpacking",
+  "text42": "Pack options",
+  "text43": "For EXT4",
+  "text44": "For EROFS",
+  "text45": "Additional settings",
+  "text46": "Partition(s) to pack",
+  "text47": "%s Level: {}",
+  "text48": "Pack with:",
+  "text49": "Output Format:",
+  "text50": "Compression method",
+  "text51": "Version:",
+  "text52": "Patch Vbmeta",
+  "text53": "Pack super",
+  "text54": "Partition Layout",
+  "text55": "Include partition(s)",
+  "text56": "Group name",
+  "text57": "Super size",
+  "text58": "Create a Sparse Image",
+  "text59": "Packed successfully! Output: %s",
+  "text60": "Please enter your link",
+  "text61": "Download:",
+  "text62": "Added to background task",
+  "text63": "Unpack after finish",
   "text64": "Progress: {}%\nDownload speed: {}KB/S\nDownloaded: {}B/ {}B",
-  "text65": "{} Download complete!  {} seconds", 
-  "text66": "Download error", 
-  "text67": "Please delete manually", 
-  "text68": "Download failed", 
-  "text69": "Clean folder exception", 
-  "text70": "Found: %s", 
-  "text71": "Processing: %s", 
-  "text72": "Cleaning up: %s", 
-  "text73": "Failed to delete %s! Reason: %s", 
-  "text74": "Resize %s to %s", 
-  "text75": "Failed to package %s!" , 
-  "text76": "Enter text", 
-  "text77": "Select file:", 
-  "text78": "Deciphering OZIP:", 
-  "text79": "Unpacking:", 
-  "text80": "%s unpack failed, reason: %s", 
+  "text65": "{} Download complete!  Took {} seconds",
+  "text66": "Download error",
+  "text67": "Please delete manually",
+  "text68": "Download failed",
+  "text69": "An error occurred cleaning up the directory",
+  "text70": "Found: %s",
+  "text71": "Processing: %s",
+  "text72": "Cleaning up: %s",
+  "text73": "Failed to delete %s! Reason: %s",
+  "text74": "Resizing %s to %s",
+  "text75": "Failed to pack %s!",
+  "text76": "Enter text",
+  "text77": "Select file:",
+  "text78": "Decrypting OZIP:",
+  "text79": "Unpacking:",
+  "text80": "%s unpack failed, reason: %s",
   "text81": "Decompression completed",
-  "text82": "This file is not supported format, %s",
-  "text83": "Merge %s to %s", 
-  "text84": "does not exist",
-  "text85": "Processing:", 
-  "text86": "Package %s as %s.new.dat", 
-  "text87": "Packaging %s.new.dat complete", 
-  "text88": "Start packing %s.new.dat.br", 
-  "text89": "Packed %s.new.dat.br complete", 
-  "text90": "Start packing: %s [erofs] \nCompression format: %s \nversion: %s", 
-  "text91": "Start packing: %s", 
-  "text92": "Status:", 
-  "text93": "Upload failed", 
-  "text94": "Upload successful", 
-  "text95": "Logs saved to:", 
-  "text96": "Selected items:", 
-  "text97": "Deleting:", 
-  "text98": "Delete successful:", 
-  "text99": "New Project:%s", 
-  "text100": "Select Theme:", 
-  "text101": "Failed to select topic: %s Reason: %s", 
-  "text102": "Rename:", 
-  "text103": "A folder or file with the same name exists!" , 
-  "text104": "Same name", 
-  "text105": "Clear", 
-  "text106": "Export", 
-  "text107": "Upload", 
-  "text108": "Welcome to the new MIO-KITCHEN\nThis tool is free forever", 
-  "text109": "Mio-KitChen will always remain free \n donate to developers as a token of support.",
-  "text110": "©2023 Mio Technology All Rights Reserved.",
-  "text111": "- Focus on Android ROM modification -", 
+  "text82": "This file is not in a supported format, %s",
+  "text83": "Appending %s to %s",
+  "text84": ", The File/Folder does not exist",
+  "text85": "Processing:",
+  "text86": "Converting %s to %s.new.dat",
+  "text87": "Finished conversion for %s.new.dat",
+  "text88": "Start compressing %s.new.dat.%s",
+  "text89": "Finished compressing %s.new.dat.%s",
+  "text90": "Start packing: %s [erofs] \nCompression format: %s \nversion: %s",
+  "text91": "Start packing: %s",
+  "text92": "Status:",
+  "text93": "Upload failed",
+  "text94": "Upload successful",
+  "text95": "Logs saved to:",
+  "text96": "Selected items:",
+  "text97": "Deleting:",
+  "text98": "Successful deleted:",
+  "text99": "New Project: %s",
+  "text100": "Select Theme:",
+  "text101": "Failed to select theme: %s Reason: %s",
+  "text102": "Rename:",
+  "text103": "A folder or file with the same name exists!",
+  "text104": "The new name is the same as the previous one.",
+  "text105": "Clear",
+  "text106": "Export",
+  "text107": "Upload",
+  "text108": "Welcome to the new MIO-KITCHEN\nThis tool is free forever",
+  "text109": "Mio-KitChen will always remain free \n Show your support to the developer by donating.",
+  "text110": "©2024 ColdWindScholar All Rights Reserved.",
+  "text111": "- Focus on Android ROM modification -",
   "text112": "Other",
-  "text113": "Unpack ROM", 
-  "text114": "Download ROM", 
-  "text115": "New", 
-  "text116": "Delete", 
-  "text117": "Rename", 
+  "text113": "Unpack ROM",
+  "text114": "Download ROM",
+  "text115": "New",
+  "text116": "Delete",
+  "text117": "Rename",
   "text118": "Pack Project",
   "text119": "Pack BOOT",
   "text120": "Pack DTBO",
   "text121": "Pack LOGO",
   "text122": "Pack ZIP",
   "text123": "Pack Super",
-  "text124": "Theme:", 
-  "text125": "Path:", 
-  "text126": "Modify", 
-  "text127": "Mio-KitChen\nHonorary production",
-  "text128": "Tool version: {}\nPython library version: {}\nOperating system: {}\nInstruction set: {}", 
-  "text129": "Select language:", 
-  "text130": "Language selection failed!", 
-  "text131": "Drag in file", 
-  "text132": "Drag the plugin or ROM here \nor use the mouse to click here to select a file", 
-  "text133": "The plugin cannot parse", 
-  "text134": "Initialization time : %s Seconds",
-  "text135": "Welcome!", 
-  "text136": "Start", 
-  "text137": "Welcome to use New MIO-KITCHEN!\nLet's Start!", 
-  "text138": "Next", 
-  "text139": "Open source certificate", 
-  "t1": "By clicking (Next), you have fully read and agree to the agreement,\nand ensure strict compliance with it", 
-  "t2": "Privacy Policy and User Agreement", 
-  "t3": "By clicking (Next), you have read and agreed to all privacy policies and user agreements", 
-  "t4": "Setting completed", 
-  "t5": "Experience the exciting M.K.C! \nClick Finish to close this Window", 
-  "t6": "Uninstall Plug-in", 
-  "t7": "Uninstall %s?", 
+  "text124": "Theme:",
+  "text125": "Working directory:",
+  "text126": "Change",
+  "text127": "This program is proudly brought you by\nThe Mio-KitChen",
+  "text128": "Tool version: {}\nPython library version: {}\nOperating system: {}\nInstruction set: {}",
+  "text129": "Select language:",
+  "text130": "Language selection failed!",
+  "text131": "Drag in file",
+  "text132": "Drag and drop the plugin or ROM here \nOr click to select a file",
+  "text132_e": "Drag and drop the file here \nOr click to select a file",
+  "text133": "Unable to parse the plugin",
+  "text134": "Startup took : %s Seconds",
+  "text135": "Welcome!",
+  "text136": "Start",
+  "text137": "Welcome to use New MIO-KITCHEN!\nLet's Start!",
+  "text138": "Next",
+  "text139": "Open source license",
+  "text140": "Back",
+  "text141": "This file is a dummy (empty) image.",
+  "t1": "By clicking (Next), you have fully read and agree to the agreement,\nand ensure strict compliance with it",
+  "t2": "Privacy Policy and User Agreement",
+  "t3": "By clicking (Next), you have read and agreed to all privacy policies and user agreements",
+  "t4": "All set",
+  "t5": "Experience the exciting M.K.C! \nClick Finish to close this Window",
+  "t6": "Uninstall Plug-in",
+  "t7": "Uninstall %s?",
   "t8": "The following plugins will also be uninstalled:",
   "t9": "Delete {}?",
-  "t10": "Super size {} too small.\nPlease reset the size.\nWe have filled in the reference value for you",
-  "t11": "Delete Source File",
-  "t12": "Is your OFP mtk or qc?\nMTK: enter ok\nQC: enter cancel",
-  "t13": "format conversion",
+  "t10": "Super size {} too small.\nPlease re-enter the size.\nWe have filled in the reference value for you",
+  "t11": "Remove the Original File",
+  "t12": "Is your OFP mtk or qcom?\nMTK -> Hit ok\nQCOM -> Hit cancel",
+  "t13": "Convert Image",
   "t14": "Export",
-  "t15": "Export successful:%s",
-  "t16": "Export Fail:%s",
+  "t15": "Export successful: %s",
+  "t16": "Export Fail: %s",
   "t17": "Edit",
   "t18": "Your plugin project does not have a script file \n Please select the type of script you want to create",
-  "t19": "Make New Plug-in",
+  "t19": "Create New Plug-in",
   "t20": "Name:",
   "t21": "Author:",
   "t22": "Version:",
-  "t23": "Dependent Libraries:",
-  "t24": "Introduce：",
-  "t25": "Do you want to pack Integrated ROM",
-  "t26": "Please Enter Your Device Code",
+  "t23": "Required Libraries:",
+  "t24": "Description：",
+  "t25": "Add tools to the zip archive so that the firmware can be flashed through fastboot using a PC and through recovery?",
+  "t26": "Please enter your device codename",
   "t27": "Generate LIST",
   "t28": "Working",
-  "t29": "Warn:The Project Name Cannot has [space]",
   "t30": "EROFS Level:{}",
-  "t31": "Size Handle:",
+  "t31": "Image size:",
   "t32": "Auto",
-  "t33": "Origin",
-  "t34": "EXT4<=>EROFS"
+  "t33": "Same as Original",
+  "t35": "Support For Old Kernel",
+  "t36": "We need to restart to switch languages",
+  "t37": "Modify Size",
+  "t38": "Check Update",
+  "t39": "Update Info",
+  "t40": "Update Now",
+  "t41": "Unable to update",
+  "t42": "Click the 'Check Updates' button to obtain updates",
+  "t43": "Upgrading",
+  "t44": "Download failed, please check the network",
+  "t45": "Getting data...",
+  "t46": "Unable to get updates",
+  "t47": "Update data parsing failed, possibly server exception",
+  "t48": "New Version: %s",
+  "t49": "Your version is already the latest!",
+  "t50": "No updates found for your device",
+  "t51": "Applying Update Package...",
+  "t52": "Cleaning...",
+  "t53": "Repack zip?",
+  "t54": "Save",
+  "t55": "Saved",
+  "t56": "Chose",
+  "t57": "List of partition(s)",
+  "t58": "Modify plugin repository",
+  "t59": "Get File Info",
+  "t60": "Byte Calculator",
+  "t61": "Transparent effect",
+  "t62": "Wechat Pay",
+  "t63": "Open Source, Free, Faster",
+  "t64": "You are running the source code\\nPlease Use \"git pull\" To Update"
 }
